--- a/packages/lecture02/package.json
+++ b/packages/lecture02/package.json
@@ -4,5 +4,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack serve --config ./webpack.dev.js"
+  },
+  "devDependencies": {
+    "gsap": "^3.11.3"
   }
 }
