--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "packages/*"
   ],
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "three": "^0.146.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.7",
     "@types/sass": "^1.43.1",
     "@types/sass-loader": "^8.0.3",
+    "@types/stats.js": "^0.17.0",
     "@types/three": "^0.144.0",
     "@types/webpack": "^5.28.0",
     "css-loader": "^6.7.1",
@@ -20,6 +23,7 @@
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "scss-loader": "^0.0.1",
+    "stats.js": "^0.17.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
