--- a/packages/lecture03/package.json
+++ b/packages/lecture03/package.json
@@ -4,5 +4,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack serve --config ./webpack.dev.js"
+  },
+  "dependencies": {
+    "dat.gui": "^0.7.9",
+    "stats.js": "^0.17.0"
+  },
+  "devDependencies": {
+    "@types/dat.gui": "^0.7.7",
+    "@types/stats.js": "^0.17.0"
   }
 }
