--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "packages/*"
   ],
   "dependencies": {
+    "@types/dat.gui": "^0.7.7",
+    "dat.gui": "^0.7.9",
     "three": "^0.146.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
