--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "packages/*"
   ],
   "dependencies": {
+    "@types/dat.gui": "^0.7.7",
+    "dat.gui": "^0.7.9",
     "three": "^0.146.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
@@ -20,7 +22,6 @@
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "scss-loader": "^0.0.1",
-    "stats.js": "^0.17.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
