--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/sass-loader": "^8.0.3",
     "@types/three": "^0.144.0",
     "@types/webpack": "^5.28.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
